Handle stale m_owner in FrameView::needsScrollbarReconstruction.

If iframe content is replaced by document.write, its LayoutScrollbar can hold a
reference to the previous body element.  FrameView now detects this situation
and reconstructs the scrollbar.

This mirrors similar code in PaintLayerScrollableArea added in r352644.

BUG=678821

Review-Url: https://codereview.chromium.org/2657743004
Cr-Commit-Position: refs/heads/master@{#446360}

Former-commit-id: 2b2839b3fba03dab76bee97c6aa4eb1ab1ecb836